# shepherd

./: Cargo.toml  README.md
src/: main.rs  termination.rs
src/app/: component.rs  mod.rs
src/app/pages/: dashboard.rs  error.rs  mod.rs  search.rs  splash.rs
src/aws/: cloudwatch.rs  event_bridge.rs  lambda.rs  mod.rs
src/core/: mod.rs
src/state/: mod.rs
