[package]
name = "shepherd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
aws-config = "1.1.10"
aws-sdk-cloudwatch = "1.22.0"
aws-sdk-eventbridge = "1.20.0"
aws-sdk-lambda = "1.20.0"
chrono = "0.4.37"
crossterm = { version = "0.27.0", features = ["event-stream"] }
dirs = "5.0.1"
futures = "0.3.30"
fuzzy-matcher = "0.3.7"
ratatui = "0.26.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
skim = { version = "0.10.4", default-features = false }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "time", "io-util", "net", "signal"] }
